# kings_heart

./: .gitignore  README.md
kings_heart/: CMakeLists.txt  requirements.txt
kings_heart/admin_app/: CMakeLists.txt
kings_heart/admin_app/authentication/: AuthenticationController.cpp  AuthenticationController.hpp  AuthenticationView.cpp  AuthenticationView.hpp  CMakeLists.txt
kings_heart/admin_app/authentication/controllers/: CMakeLists.txt
kings_heart/admin_app/authentication/models/: CMakeLists.txt
kings_heart/admin_app/controllers/: CMakeLists.txt  SigninController.cpp  SigninController.hpp
kings_heart/generic_app/: CMakeLists.txt
kings_heart/generic_app/models/: CMakeLists.txt
kings_heart/generic_app/models/InsertOTP/: InsertOTP.hpp  InsertOTP.tpp
kings_heart/http1.1_apis/: CMakeLists.txt
kings_heart/http1.1_apis/admin_app/authentication/: CMakeLists.txt
kings_heart/interfaces/: CMakeLists.txt  Command.hpp  Input.hpp  user_interface.hpp
kings_heart/interfaces/Command/: Command.hpp
kings_heart/interfaces/Cryptography/: KeyDerivation.hpp
kings_heart/interfaces/Database/: DatabaseNode.hpp  bson.hpp
kings_heart/interfaces/Exception/: BaseException.hpp
kings_heart/interfaces/IO/: Input.hpp  Output.hpp
kings_heart/interfaces/IOInterfaces/: Input.hpp  Output.hpp
kings_heart/interfaces/Messenger/: Messenger.hpp
kings_heart/interfaces/SerializerInterfaces/: CMakeLists.txt  PayloadSerializer.hpp
kings_heart/interfaces/Serializers/: CMakeLists.txt  PayloadSerializer.hpp
kings_heart/lib/: CMakeLists.txt  Header.cpp  Header.hpp  HttpInput.cpp  HttpInput.hpp  HttpOutput.cpp  HttpOutput.hpp  Log.hpp  Log.tpp  Message.cpp  Message.hpp  Payload.cpp  Payload.hpp  Tokenizer.cpp  Tokenizer.hpp
kings_heart/lib/App/: App.cpp  App.hpp  CMakeLists.txt  sample.env
kings_heart/lib/BagIt/: Bagit.cpp  Bagit.hpp  Bagit.test.cpp  CMakeLists.txt
kings_heart/lib/BagIt/AdminBagit/: AdminBagit.cpp  AdminBagit.hpp  CMakeLists.txt
kings_heart/lib/BagIt/EmailContactBagit/: CMakeLists.txt  EmailContactBagit.cpp  EmailContactBagit.hpp
kings_heart/lib/BagIt/GenericBagit/: CMakeLists.txt  GenericBagit.cpp  GenericBagit.hpp
kings_heart/lib/BagIt/Message/: CMakeLists.txt  Message.hpp
kings_heart/lib/BagIt/MetaDatum/: CMakeLists.txt  MetaDatum.cpp  MetaDatum.hpp
kings_heart/lib/BagIt/Payload/: CMakeLists.txt  Payload.cpp  Payload.hpp
kings_heart/lib/BagIt/PayloadBuilder/: CMakeLists.txt  PayloadBuilder.cpp  PayloadBuilder.hpp
kings_heart/lib/Command/: CMakeLists.txt  Command.cpp  Command.hpp
kings_heart/lib/Cryptography/: CMakeLists.txt
kings_heart/lib/Cryptography/JsonWebToken/: CMakeLists.txt  CTestTestfile.cmake  JsonWebToken.cpp  JsonWebToken.hpp  Makefile  cmake_install.cmake
kings_heart/lib/Cryptography/Password/: CMakeLists.txt  Password.cpp  Password.hpp
kings_heart/lib/Cryptography/Scrypt/: CMakeLists.txt  Scrypt.cpp  Scrypt.hpp
kings_heart/lib/Database/: CMakeLists.txt
kings_heart/lib/Database/DatabaseQueryBuilder/: CMakeLists.txt  DatabaseQueryBuilder.cpp  DatabaseQueryBuilder.hpp
kings_heart/lib/Database/LiveDatabaseNode/: LiveDatabaseNode.hpp  LiveDatabaseNode.tpp
kings_heart/lib/Exception/: CMakeLists.txt
kings_heart/lib/Exception/BadRequest/: BadRequest.cpp  BadRequest.hpp  CMakeLists.txt
kings_heart/lib/Exception/ExceptionHandler/: CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.hpp
kings_heart/lib/Exception/Unauthorized/: CMakeLists.txt  Unauthorized.cpp  Unauthorized.hpp
kings_heart/lib/File/: CMakeLists.txt  File.cpp  File.hpp  File.test.cpp
kings_heart/lib/IO/: CMakeLists.txt
kings_heart/lib/IO/Input/: CMakeLists.txt
kings_heart/lib/IO/Output/: CMakeLists.txt
kings_heart/lib/Log/: CMakeLists.txt
kings_heart/lib/Log/CommandStorage/: CMakeLists.txt  CommandStorage.cpp  CommandStorage.hpp
kings_heart/lib/Log/MainLog/: CMakeLists.txt  MainLog.cpp  MainLog.hpp
kings_heart/lib/Messenger/: CMakeLists.txt
kings_heart/lib/Messenger/EmailMessenger/: CMakeLists.txt  EmailMessenger.cpp  EmailMessenger.hpp
kings_heart/lib/Messenger/SMSMessenger/: CMakeLists.txt
kings_heart/lib/PayloadSerializers/: CMakeLists.txt
kings_heart/lib/Registry/: CMakeLists.txt
kings_heart/lib/Utility/: CMakeLists.txt  Enums.hpp  Functions.cpp  Functions.hpp  LoadEnv.cpp  LoadEnv.hpp  Objects.cpp
(+53 files in other folders)
